--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <!--ここに名前を入力-->
                             </p>
                             <p class="label">所属<span class="content">東海大学</span></p>
-                            <p class="label">趣味<span class="content">ゲーム</span></p>
+                            <p class="label">趣味<span class="content">筋トレ</span></p>
                             <p class="label">自己紹介<span class="content">暑いの嫌いです。</span></p>
 
                             <div class="sns-links">
