--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="profile-info">
                         <div class="profile">
-                            <p class="name">Test User
+                            <p class="name">大槻拓也
                                 <!--ここに名前を入力-->
                             </p>
                             <p class="label">所属<span class="content">東海大学</span></p>
