--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     </div>
                     <div class="profile-info">
                         <div class="profile">
-                            <p class="name">大槻拓也
-                                <!--ここに名前を入力-->
+                            <p class="name">氏名
+                                <!--大槻拓也-->
                             </p>
                             <p class="label">所属<span class="content">東海大学</span></p>
                             <p class="label">趣味<span class="content">筋トレ</span></p>
